# opengl

./: .gitignore  .gitmodules  CMakeLists.txt
experiments/: a.out  test.cpp
src/: AssetManager.cpp  AssetManager.h  Display.cpp  Display.h  Geometry.cpp  Geometry.h  Image.cpp  Image.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  main.cpp
src/shaders/: basicFragment.glsl  basicVertex.glsl
src/shaders/basic/: fragment.glsl  manifest.json  vertex.glsl
